--- a/trunk/AndroidClient/res/values/strings.xml
+++ b/trunk/AndroidClient/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, SimpleTestActivity!</string>
+    <string name="hello">Hello World!</string>
     <string name="app_name">SimpleTest</string>
+    <string name="pingButton">Ping!</string>
 
 </resources>
