--- a/CFClientNew/res/values/strings.xml
+++ b/CFClientNew/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Simple Client</string>
 
 
-<string name="enter_message_hint">Enter message</string>
+<string name="enter_message_hint">Enter message</string><string name="alert_dialog_password">Enter password</string>
+
 </resources>
